crates/tui/tests/storybook/snapshots/app_tool__web_tool_states.expanded.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: text
---
* web_fetch https://example.com/release                            14:37:03

* web_search rust unicode width crate                              14:37:03
  1. unicode-width - crates.io
  2. unicode-segmentation - crates.io









─ ✿ working… ───────────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────────────────
 ○ normal                                                           1:1 100%
